{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 155,
  "lineage": "cab4bab5-9995-236a-d36d-7ad45f1aa44f",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063dd30adbb186909",
            "arn": "arn:aws:ec2:us-west-1:799637762685:instance/i-055fc87ee837dc8ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-055fc87ee837dc8ea",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myEc2KeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2117b2b144478ac",
            "private_dns": "ip-10-0-1-187.us-west-1.compute.internal",
            "private_ip": "10.0.1.187",
            "public_ip": "13.57.215.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-07d67db9c03efad9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-055f2ca010cdcc278"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045df4f35159b45cd",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055f2ca010cdcc278"
            ]
          },
          "depends_on": [
            "aws_key_pair.myEc2KeyPair"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-063dd30adbb186909",
            "arn": "arn:aws:ec2:us-west-1:799637762685:instance/i-0101d4368f6082d46",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0101d4368f6082d46",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myEc2KeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-073606f35eebd03ca",
            "private_dns": "ip-10-0-1-36.us-west-1.compute.internal",
            "private_ip": "10.0.1.36",
            "public_ip": "13.57.58.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-08a902b17cd2d53a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-055f2ca010cdcc278"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045df4f35159b45cd",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-055f2ca010cdcc278"
            ]
          },
          "depends_on": [
            "aws_key_pair.myEc2KeyPair"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-091469bcd1b3b05e3",
            "owner_id": "799637762685",
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-095345aa7da828f8b",
            "owner_id": "799637762685",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d25296efbe7044d5",
            "owner_id": "799637762685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091469bcd1b3b05e3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_internet_gateway.IGW",
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rtb_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab3628690a426464",
            "route_table_id": "rtb-0d25296efbe7044d5",
            "subnet_id": "subnet-045df4f35159b45cd"
          },
          "depends_on": [
            "aws_route_table.public_rtb",
            "aws_subnet.subnets[0]"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_rtb_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05608398bad2572f8",
            "route_table_id": "rtb-095345aa7da828f8b",
            "subnet_id": "subnet-0d3d3231754c0d8b0"
          },
          "depends_on": [
            "aws_route_table.private_rtb",
            "aws_subnet.subnets[1]"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ins-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:799637762685:security-group/sg-055f2ca010cdcc278",
            "description": "Allow inbound SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055f2ca010cdcc278",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": null,
            "owner_id": "799637762685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:799637762685:subnet/subnet-045df4f35159b45cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-045df4f35159b45cd",
            "map_public_ip_on_launch": false,
            "owner_id": "799637762685",
            "tags": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:799637762685:subnet/subnet-0d3d3231754c0d8b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d3d3231754c0d8b0",
            "map_public_ip_on_launch": false,
            "owner_id": "799637762685",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-081bff88ebde1d6bb"
          },
          "depends_on": [
            "aws_vpc.myVpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:799637762685:vpc/vpc-081bff88ebde1d6bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0811c2be20cc3b589",
            "default_route_table_id": "rtb-05e10fd9b925009f6",
            "default_security_group_id": "sg-05c8653fb96f6daf9",
            "dhcp_options_id": "dopt-35421252",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-081bff88ebde1d6bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e10fd9b925009f6",
            "owner_id": "799637762685",
            "tags": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}